--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for ansible-zabbix-agentd
+
+- name: restart zabbix agent
+  service:
+    name: "{{ zabbix_agentd_service }}"
+    state: restarted
