--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,13 @@
 ---
 # defaults file for ansible-zabbix-agentd
+
+zabbix_user: zabbix
+zabbix_group: zabbix
+zabbix_version: 3.0.19
+zabbix_source_dir: /usr/local/src
+zabbix_basedir: /data/service/zabbix
+
+# Configuration parameters for "zabbix_agentd.conf"
+zabbix_server: 10.216.90.12
+zabbix_server_port: 10051
+zabbix_agentd_port: 10050
