--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,3 @@
 ---
 # vars file for ansible-zabbix-agentd
-sysd_script: "/usr/lib/systemd/system/zabbix_agentd.service"
-init_script: "/etc/init.d/zabbix_agentd"
+zabbix_agentd_service: zabbix_agentd
