--- a/vars/centos-7.yml
+++ b/vars/centos-7.yml
@@ -1,1 +1,3 @@
-zabbix_agentd_service: zabbix_agentd 
+use_initd: true
+use_systemd: false
+sysd_script: "/usr/lib/systemd/system/zabbix_agentd.service"
